--- a/impedanceUI.ipynb
+++ b/impedanceUI.ipynb
@@ -64,9 +64,9 @@
         "    };\n",
         "\n",
         "    function osc_level() {\n",
-        "        var form = $('<form>').addClass('span3').attr('align', 'right')\n",
+        "        var form = $('<form>').addClass('span3').attr('align', 'left')\n",
         "        var field = $('<fieldset>')\n",
-        "                    .append('<label>Oscillation Level:</label>')\n",
+        "                    .append('<label>Oscillation Level (Volts):</label>')\n",
         "                    .append('<input class=\"osc_level\">').attr('type','text')\n",
         "        return form.append(field)\n",
         "    };\n",
@@ -117,8 +117,7 @@
         "        return $('<div>').attr('align','right').addClass('sweep_div span3').text('Type of test measurement:')\n",
         "                .append($('<select/>').addClass('span3 switch-box').addClass('test_type')\n",
         "                    .append(($('<option>').val('freq').text('Frequency')))\n",
-        "                    .append(($('<option>').val('volt').text('Voltage'))))\n",
-        "                    .append(test_select('Frequency',settings))\n",
+        "                    .append(($('<option>').val('volt').text('Voltage')))\n",
         "                    .change(function(){\n",
         "                        // Changes between test voltage and frequency forms\n",
         "                        var sel = $('.test_type').val();\n",
@@ -128,7 +127,8 @@
         "                        else if (sel == 'volt') {\n",
         "                            $('.test_div').replaceWith(test_select('Voltage', settings));\n",
         "                        }\n",
-        "                    });\n",
+        "                    }))\n",
+        "                    .append(test_select('Frequency',settings));\n",
         "    };\n",
         "\n",
         "    function test_select(item, settings) {\n",
@@ -171,7 +171,6 @@
         "                        var value = $(settings[i]).val()\n",
         "                        IPython.notebook.kernel.execute(value)\n",
         "                    };\n",
-        "                    IPython.notebook.kernel.execute('panel[\"osc_level\"]='+$('.osc_level').val())\n",
         "                    // set the start, stop, and step frequency to \n",
         "                    // python dictionary\n",
         "                    console.log(sweep)\n",
@@ -194,6 +193,7 @@
         "                        IPython.notebook.kernel.execute('sweep[\"sweep_type\"]=\"'+sweep_type+'\"')\n",
         "                        IPython.notebook.kernel.execute('sweep_data,it=sweep_message(sweep)');\n",
         "                    };\n",
+        "                    IPython.notebook.kernel.execute('panel[\"osc_level\"]='+$('.osc_level').val())\n",
         "\n",
         "                    // grab the front panel settings in python and convert\n",
         "                    // them to a message for the impedance analyzer\n",
@@ -208,7 +208,7 @@
         "\n",
         "    var settings = ['.displayA','.displayB','.circuit','.trigger','.dcbias']\n",
         "\n",
-        "    $('#AnalyzerUI').append('<h3>Impedance Analyzer:</h3>')\n",
+        "    $('#AnalyzerUI').append('<h3>Impedance Analyzer User Interface:</h3>')\n",
         "        .append(sweep_select(settings))\n",
         "        .append(select_box('Display A', 'displayA', ['Z/Y','R/G','L','C'], 4))\n",
         "        .append(select_box('Display B', 'displayB', ['Rad','Deg'], 2))\n",
@@ -234,26 +234,19 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 63,
+       "prompt_number": 17,
        "text": [
-        "<IPython.core.display.Javascript at 0x108007750>"
+        "<IPython.core.display.Javascript at 0x103f2f490>"
        ]
       }
      ],
-     "prompt_number": 63
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "<div id='AnalyzerUI'></div>"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "<div id='run'></div>"
      ]
     },
     {
@@ -277,125 +270,6 @@
       "xlabel('Frequency (kHz)')\n",
       "ylabel('Phase Angle (degrees)')"
      ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "RL1,D1,R8,F1,T3,B2,C3,A1,AB,W1,TF10.000000EN,PF1000.000000EN,SF1.000000EN,G0,W2,EX\n"
-       ]
-      }
-     ],
-     "prompt_number": 6
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "message"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 61,
-       "text": [
-        "'RL1,D1,R8,F1,B2,A1,T3,C1,OL2.000EN,AB,W1,TF12.000000EN,PF133.000000EN,SF12.000000EN,G0,W2,EX'"
-       ]
-      }
-     ],
-     "prompt_number": 61
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "panel"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 60,
-       "text": [
-        "{'circuit': 'Auto',\n",
-        " 'dcbias': 'On',\n",
-        " 'displayA': 'Z/Y',\n",
-        " 'displayB': 'Rad',\n",
-        " 'osc_level': 2,\n",
-        " 'trigger': 'Hold/Manual'}"
-       ]
-      }
-     ],
-     "prompt_number": 60
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "grab_settings(panel)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "ename": "KeyError",
-       "evalue": "'osc_level'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-47-95a81529cdd8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgrab_settings\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpanel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-        "\u001b[0;32m/Users/Zsailer/Documents/fernsler/Impedance/impedanceanalyzer.py\u001b[0m in \u001b[0;36mgrab_settings\u001b[0;34m(panel)\u001b[0m\n\u001b[1;32m    340\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'osc_level'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    341\u001b[0m             \u001b[0mmessage\u001b[0m\u001b[0;34m+=\u001b[0m \u001b[0msettings\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpanel\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 342\u001b[0;31m     \u001b[0mmessage\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m\"OL%.3fEN,\"\u001b[0m \u001b[0;34m%\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpanel\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'osc_level'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    343\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmessage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    344\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mKeyError\u001b[0m: 'osc_level'"
-       ]
-      }
-     ],
-     "prompt_number": 47
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 23
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "panel"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 27,
-       "text": [
-        "{'circuit': 'Auto',\n",
-        " 'dcbias': 'On',\n",
-        " 'displayA': 'Z/Y',\n",
-        " 'displayB': 'Rad',\n",
-        " 'osc_level': 2,\n",
-        " 'trigger': 'Hold/Manual'}"
-       ]
-      }
-     ],
-     "prompt_number": 27
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
